CSS style changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,43 @@
 /* Body styles
 --------------------------------------------------- */
 body {
-	font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 /* Navigation bar styles
 --------------------------------------------------- */
 .nav {
-	padding: 25px 0;
+  padding: 25px 0;
 }
 
 .nav-brand {
-	margin: 0 40px;
+  margin: 0 40px;
 }
 
 .nav-item {
-	padding-top: 25px;
+  padding-top: 25px;
 }
 
 a {
-	color: #000;
-	font-weight: 700;
-	font-size: 14px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
+  color: #000;
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 a:hover {
-	color: #000;
+  color: #000;
 }
 
 /* Jumbotron styles
 --------------------------------------------------- */
 .bg-cover {
-	background: url("../images/good-food.png") no-repeat;
+  background: url('../images/good-food.png') no-repeat;
   background-size: 43%;
-	background-position: 50% 50%;
-	position: relative;
-	margin-bottom: 0;
+  background-position: 50% 50%;
+  position: relative;
+  margin-bottom: 0;
   /* z-index: -2; */
 }
 
@@ -53,67 +53,67 @@ a:hover {
 }
 
 .jumbotron-text-container {
-	text-align: center;
-	padding-top: 15%;
-	padding-bottom: 15%;
-	/* padding-right: 60px; */
+  text-align: center;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  /* padding-right: 60px; */
 }
 
 .display-4 {
-	color: #fff;
-	font-weight: 700;
-	font-size: 46px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 46px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .jumbo-btn {
-	color: #000;
-	background-color: #01ffcb;
-	font-weight: 700;
-	font-size: 14px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	border-radius: 5px;
-	padding: 17px 45px;
-	margin-top: 20px;
+  color: #000;
+  background-color: #01ffcb;
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-radius: 5px;
+  padding: 17px 45px;
+  margin-top: 20px;
 }
 
 /* Menu Container styles
 --------------------------------------------------- */
 section {
-	background-color: #01ffcb;
-	padding-top: 50px;
-	padding-bottom: 50px;
+  background-color: #01ffcb;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .menu-title {
-	margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 h2 {
-	color: #000;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: 2px;
+  color: #000;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .bg-container {
-	background-color: #fff;
-	border-radius: 5px;
-	width: 350px;
-	height: 350px;
-	padding-top: 25%;
-	box-shadow: 0px 0px 8px 0px #9d9d9dbf;
-	-webkit-box-shadow: 0px 0px 8px 0px #9d9d9dbf;
-	-moz-box-shadow: 0px 0px 8px 0px #9d9d9dbf;
+  background-color: #fff;
+  border-radius: 5px;
+  width: 350px;
+  height: 350px;
+  padding-top: 25%;
+  box-shadow: 0px 0px 8px 0px #9d9d9dbf;
+  -webkit-box-shadow: 0px 0px 8px 0px #9d9d9dbf;
+  -moz-box-shadow: 0px 0px 8px 0px #9d9d9dbf;
 }
 
 h4 {
-	color: #000;
-	font-weight: 700;
-	font-size: 20px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	margin-top: 30px;
+  color: #000;
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 30px;
 }
