Responsive styling added to the menu cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 /* Navigation bar styles
 --------------------------------------------------- */
 .nav {
-  padding: 25px 0;
+  padding: 25px 0 25px 40px;
 }
 
 .nav-brand {
@@ -83,7 +83,7 @@ a:hover {
 --------------------------------------------------- */
 section {
   background-color: #01ffcb;
-  padding-top: 50px;
+  padding: 50px;
   padding-bottom: 50px;
 }
 
@@ -101,12 +101,28 @@ h2 {
 .bg-container {
   background-color: #fff;
   border-radius: 5px;
-  width: 350px;
   height: 350px;
-  padding-top: 25%;
+  width: 350px;
+  margin: 0 10px;
+  padding-top: 80px;
   box-shadow: 0px 0px 8px 0px #9d9d9dbf;
-  -webkit-box-shadow: 0px 0px 8px 0px #9d9d9dbf;
-  -moz-box-shadow: 0px 0px 8px 0px #9d9d9dbf;
+}
+
+img.img-burger {
+  width: 183px;
+  height: 141px;
+}
+
+img.img-sandwich {
+  width: 198px;
+  height: 144px;
+  margin-bottom: -3px;
+}
+
+img.img-hotdog {
+  width: 195px;
+  height: 139px;
+  margin-bottom: 3px;
 }
 
 h4 {
@@ -116,4 +132,146 @@ h4 {
   text-transform: uppercase;
   letter-spacing: 1px;
   margin-top: 30px;
+}
+
+/* Media Queries
+--------------------------------------------------- */
+
+/* Max Width (991px) */
+
+@media only screen and (max-width: 991px) {
+  
+  .bg-container {
+    background-color: #fff;
+    border-radius: 5px;
+    height: 250px;
+    width: 223px;
+    margin: 0 10px;
+    padding-top: 55px;
+    box-shadow: 0px 0px 8px 0px #9d9d9dbf;
+  }
+
+  img.img-burger {
+    width: 143px;
+    height: 101px;
+  }
+  
+  img.img-sandwich {
+    width: 158px;
+    height: 104px;
+    margin-bottom: -3px;
+  }
+  
+  img.img-hotdog {
+    width: 155px;
+    height: 99px;
+    margin-bottom: 3px;
+  }
+
+  h4 {
+    color: #000;
+    font-weight: 700;
+    font-size: 17px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 30px;
+  }
+}
+
+/* Max Width (767px) */
+
+@media only screen and (max-width: 767px) {
+  
+  .col-sm {
+    flex-basis: auto;
+  }
+
+  .menu-title {
+    margin-bottom: 40px;
+  }
+
+  .bg-container {
+    background-color: #fff;
+    border-radius: 5px;
+    height: 275px;
+    width: 100%;
+    margin: 10px 0;
+    padding-top: 47px;
+    box-shadow: 0px 0px 8px 0px #9d9d9dbf;
+  }
+
+  img.img-burger {
+    width: 173px;
+    height: 131px;
+  }
+  
+  img.img-sandwich {
+    width: 188px;
+    height: 134px;
+    margin-bottom: -3px;
+  }
+  
+  img.img-hotdog {
+    width: 185px;
+    height: 129px;
+    margin-bottom: 3px;
+  }
+
+  h4 {
+    color: #000;
+    font-weight: 700;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 30px;
+  }
+}
+
+/* Max Width (458px) */
+
+@media only screen and (max-width: 458px) {
+  
+  .col-sm {
+    flex-basis: auto;
+  }
+
+  .menu-title {
+    margin-bottom: 40px;
+  }
+
+  .bg-container {
+    background-color: #fff;
+    border-radius: 5px;
+    height: 275px;
+    width: 100%;
+    margin: 10px 0;
+    padding-top: 60px;
+    box-shadow: 0px 0px 8px 0px #9d9d9dbf;
+  }
+
+  img.img-burger {
+    width: 153px;
+    height: 111px;
+  }
+  
+  img.img-sandwich {
+    width: 168px;
+    height: 114px;
+    margin-bottom: -3px;
+  }
+  
+  img.img-hotdog {
+    width: 165px;
+    height: 109px;
+    margin-bottom: 3px;
+  }
+
+  h4 {
+    color: #000;
+    font-weight: 700;
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 30px;
+  }
 }
