Finished up some navbar-mobile styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ a:hover {
   color: #000;
 }
 
+.mobile-nav {
+  display: none;
+}
+
 /* Jumbotron styles
 --------------------------------------------------- */
 .bg-cover {
@@ -38,7 +42,6 @@ a:hover {
   background-position: 50% 50%;
   position: relative;
   margin-bottom: 0;
-  /* z-index: -2; */
 }
 
 .overlay {
@@ -56,7 +59,6 @@ a:hover {
   text-align: center;
   padding-top: 15%;
   padding-bottom: 15%;
-  /* padding-right: 60px; */
 }
 
 .display-4 {
@@ -140,7 +142,13 @@ h4 {
 /* Max Width (991px) */
 
 @media only screen and (max-width: 991px) {
-  
+  .bg-cover {
+    background-size: 55%;
+    background-position: 50% 50%;
+    position: relative;
+    margin-bottom: 0;
+  }
+
   .bg-container {
     background-color: #fff;
     border-radius: 5px;
@@ -155,13 +163,13 @@ h4 {
     width: 143px;
     height: 101px;
   }
-  
+
   img.img-sandwich {
     width: 158px;
     height: 104px;
     margin-bottom: -3px;
   }
-  
+
   img.img-hotdog {
     width: 155px;
     height: 99px;
@@ -181,7 +189,45 @@ h4 {
 /* Max Width (767px) */
 
 @media only screen and (max-width: 767px) {
-  
+  a.nav-link {
+    display: none;
+  }
+
+  .nav-brand {
+    padding-right: 40px;
+  }
+
+  .mobile-nav {
+    display: inline-flex;
+    width: 100%;
+    color: #000;
+    background-color: #01ffcb;
+    font-weight: 700;
+    font-size: 14px;
+    list-style-type: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    margin-bottom: 0;
+  }
+
+  a.mobile-link {
+    margin-right: 20px;
+  }
+
+  a.mobile-link:hover {
+    text-decoration: none;
+  }
+
+  .bg-cover {
+    background-size: 65%;
+    background-position: 50% 50%;
+    position: relative;
+    margin-bottom: 0;
+  }
+
   .col-sm {
     flex-basis: auto;
   }
@@ -204,13 +250,13 @@ h4 {
     width: 173px;
     height: 131px;
   }
-  
+
   img.img-sandwich {
     width: 188px;
     height: 134px;
     margin-bottom: -3px;
   }
-  
+
   img.img-hotdog {
     width: 185px;
     height: 129px;
@@ -230,7 +276,6 @@ h4 {
 /* Max Width (458px) */
 
 @media only screen and (max-width: 458px) {
-  
   .col-sm {
     flex-basis: auto;
   }
@@ -253,13 +298,13 @@ h4 {
     width: 153px;
     height: 111px;
   }
-  
+
   img.img-sandwich {
     width: 168px;
     height: 114px;
     margin-bottom: -3px;
   }
-  
+
   img.img-hotdog {
     width: 165px;
     height: 109px;
@@ -273,5 +318,16 @@ h4 {
     text-transform: uppercase;
     letter-spacing: 1px;
     margin-top: 30px;
+  }
+}
+
+/* Max Width (445px) */
+
+@media only screen and (max-width: 445px) {
+  .bg-cover {
+    background-size: 85%;
+    background-position: 50% 50%;
+    position: relative;
+    margin-bottom: 0;
   }
 }
